windows/Ghostty/Interop/NativeMethods.cs


    // ghostty_surface_binding_action takes a non-NUL-terminated UTF-8
    // string plus length and runs it through input.Binding.Action.parse.
    // Used to forward ScrollBar drag events back into libghostty as a
    // "scroll_to_row:N" binding action — the same path GTK uses from
    // its vadjustment value-changed signal (see src/apprt/gtk/class/
    // surface.zig::vadjValueChanged).
    // Raw-pointer overload for zero-alloc hot paths (scrollbar drag):
    // caller owns the UTF-8 buffer (typically stackalloc'd) and passes
    // its length in bytes. No NUL terminator required on the native
    // side — libghostty takes (ptr, len).
    [LibraryImport(Dll, EntryPoint = "ghostty_surface_binding_action")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static unsafe partial byte SurfaceBindingActionNative(
        GhosttySurface surface,
        byte* action,
        UIntPtr actionLen);

    internal static unsafe bool SurfaceBindingAction(
        GhosttySurface surface,
        byte* action,
        UIntPtr actionLen)
        => SurfaceBindingActionNative(surface, action, actionLen) != 0;

    // ---- surface misc --------------------------------------------------

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_request_close")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceRequestClose(GhosttySurface surface);

    // ghostty_surface_set_custom_shader swaps the per-surface custom shader
    // override live: the renderer rebuilds its post-process pipeline through
    // the config-change path while the grid, scrollback, and cursor are
    // preserved. Null or empty clears the override (no shader). Used by the
    // shader gallery picker so flipping entries never resets the preview.
    // StringMarshalling.Utf8 is a [LibraryImport] option, not a
    // [MarshalAs], so it coexists with DisableRuntimeMarshalling (same
    // rationale as the clipboard request binding above).
    //
    // Imported as void even though the Zig side returns a bool. That bool is
    // false only when updateConfig fails, NOT when the shader fails to load
    // or compile (those arrive as the custom_shader_failed action), and there
    // is nothing a caller can do with it: the preview has no second shader to
    // fall back to and the surface keeps rendering with whatever it had. A
    // bool return would promise information nobody consumes, and discarding
    // one at the call site is how a silent failure hides. Dropping a cdecl
    // return value is well defined; the callee still pops nothing.
    [LibraryImport(Dll, EntryPoint = "ghostty_surface_set_custom_shader",
        StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceSetCustomShader(
        GhosttySurface surface,
        string? shaderPath);

    // ghostty_surface_vt_write feeds raw VT bytes into the surface's
    // terminal parser as if they came from the PTY. Raw-pointer overload:
    // the caller owns the buffer for the duration of the call and passes
    // its length in bytes (no NUL terminator involved).
    [LibraryImport(Dll, EntryPoint = "ghostty_surface_vt_write")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static unsafe partial void SurfaceVtWrite(
        GhosttySurface surface,
        byte* utf8,
        nuint len);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_process_exited")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceProcessExitedNative(GhosttySurface surface);

    internal static bool SurfaceProcessExited(GhosttySurface surface)
        => SurfaceProcessExitedNative(surface) != 0;

    // ghostty_surface_complete_clipboard_request(surface, complete_s*, state)
    // Called once per read/confirm request to return clipboard contents to
    // libghostty and release its internal request state. Must be called
    // exactly once even on error paths -- skipping it leaks state inside
    // libghostty. The deny entry point below is the other way to discharge
    // the obligation; exactly one of the two must run.
    //
    // `confirmed` used to be a trailing bool here. It now lives inside
    // ghostty_clipboard_complete_s along with `remember`, so a denial is no
    // longer expressible as "complete with confirmed = false" -- that would
    // now complete with an EMPTY payload and a confirmed flag, which is not
    // the same thing. Denials go through SurfaceDenyClipboardRequest.
    [LibraryImport(Dll, EntryPoint = "ghostty_surface_complete_clipboard_request")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial void SurfaceCompleteClipboardRequestNative(
        IntPtr surface,
        IntPtr complete,
        IntPtr state);

    internal static void SurfaceCompleteClipboardRequest(
        IntPtr surface,
        IntPtr complete,
        IntPtr state)
        => SurfaceCompleteClipboardRequestNative(surface, complete, state);

    // ghostty_surface_deny_clipboard_request(surface, state)
    // Discharges the request without supplying contents. This is the correct
    // answer for "the user said no" and for "this runtime cannot serve that",
    // both of which previously had to be faked as an empty completion.
    [LibraryImport(Dll, EntryPoint = "ghostty_surface_deny_clipboard_request")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial void SurfaceDenyClipboardRequestNative(
        IntPtr surface,
        IntPtr state);

    internal static void SurfaceDenyClipboardRequest(IntPtr surface, IntPtr state)
        => SurfaceDenyClipboardRequestNative(surface, state);


    // ---- inline theme picker ---------------------------------------------

    // Callback for the inline theme picker. Fired from the Zig/apprt
    // thread for each preview/confirm event.
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    internal delegate void InlineThemeCallback(IntPtr namePtr, byte confirmed);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_list_themes")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial IntPtr SurfaceListThemes(GhosttySurface surface, IntPtr callback);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_list_themes_should_quit")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceListThemesShouldQuitNative(IntPtr handle);

    internal static bool SurfaceListThemesShouldQuit(IntPtr handle)
        => SurfaceListThemesShouldQuitNative(handle) != 0;

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_list_themes_deinit")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceListThemesDeinit(GhosttySurface surface, IntPtr handle);

    // ---- CLI actions ---------------------------------------------------

    [LibraryImport(Dll, EntryPoint = "ghostty_cli_run_action")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial int CliRunAction();

    [LibraryImport(Dll, EntryPoint = "ghostty_cli_set_theme_callback")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void CliSetThemeCallback(IntPtr callback);

    // ---- log bridge ----------------------------------------------------

    // Register (or clear, with IntPtr.Zero) an embedder callback that
    // receives every libghostty std.log message. The delegate type is
    // LibghosttyLogBridge.LogCallbackDelegate in Ghostty.Core.Logging;
    // we take IntPtr here so this P/Invoke surface does not pull a
    // Ghostty.Core type into the marshaling signature. Level maps as:
    // 0=debug, 1=info, 2=warn, 3=err. Scope and message bytes are NOT
    // null-terminated; companion lengths are passed to the callback.
    [LibraryImport(Dll, EntryPoint = "ghostty_log_set_callback")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void LogSetCallback(IntPtr callback, IntPtr userData);

    // ---- inspector -----------------------------------------------------
    //
    // The inspector is an ImGui overlay 1:1 with a surface. On Windows it
    // lives in its own WinUI window whose swap chain libghostty owns: the
    // surface_* functions create/drive/tear down that swap chain (bound to a
    // SwapChainPanel), and the input functions forward UI events into the
    // ImGui context. Keyboard key events (ghostty_inspector_key) are not yet
    // wired -- text input via ghostty_inspector_text plus mouse covers v1.

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_inspector")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttyInspector SurfaceInspector(GhosttySurface surface);

    [LibraryImport(Dll, EntryPoint = "ghostty_inspector_directx12_surface_init")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte InspectorDirectX12SurfaceInitNative(
        GhosttyInspector inspector,
        IntPtr swapChainPanel,
        uint width,
        uint height);

    internal static bool InspectorDirectX12SurfaceInit(
        GhosttyInspector inspector,
        IntPtr swapChainPanel,
        uint width,
        uint height)
        => InspectorDirectX12SurfaceInitNative(inspector, swapChainPanel, width, height) != 0;

    [LibraryImport(Dll, EntryPoint = "ghostty_inspector_directx12_surface_present")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void InspectorDirectX12SurfacePresent(GhosttyInspector inspector);

    [LibraryImport(Dll, EntryPoint = "ghostty_inspector_directx12_surface_resize")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void InspectorDirectX12SurfaceResize(
        GhosttyInspector inspector,
        uint width,
        uint height);

    [LibraryImport(Dll, EntryPoint = "ghostty_inspector_directx12_surface_shutdown")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void InspectorDirectX12SurfaceShutdown(GhosttyInspector inspector);

    [LibraryImport(Dll, EntryPoint = "ghostty_inspector_set_focus")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial void InspectorSetFocusNative(GhosttyInspector inspector, byte focused);

    internal static void InspectorSetFocus(GhosttyInspector inspector, bool focused)
        => InspectorSetFocusNative(inspector, focused ? (byte)1 : (byte)0);

    [LibraryImport(Dll, EntryPoint = "ghostty_inspector_set_content_scale")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void InspectorSetContentScale(GhosttyInspector inspector, double x, double y);
